chore: resolve fonts, spacing and path issues.

--- a/client-portal/src/pages/public/anydesk/Anydesk.scss
+++ b/client-portal/src/pages/public/anydesk/Anydesk.scss
@@ -118,7 +118,7 @@
     .anydesk-download-title {
       color: white;
       font-weight: 400;
-      font-size: 2.875rem;
+      font-size: 1.875rem;
       @media (max-width: 768px) {
         font-size: 2.5rem;
       }
@@ -163,7 +163,7 @@
     .anydesk-download-text {
       color: white;
       font-weight: 400;
-      font-size: 2.25rem;
+      font-size: 1.25rem;
       @media (max-width: 768px) {
         font-size: 2.125rem;
       }
@@ -208,7 +208,7 @@
         display: flex;
         gap: 1rem;
         color: white;
-        font-size: 2.125rem;
+        font-size: 1.20rem;
         font-weight: 400;
         align-items: center;
       }
